--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-dates": "^21.7.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
