--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^7.9.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dates": "^21.7.0",
