--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   }
 }
