--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "live-server public/",
     "build": "webpack --config webpack.prod.js",
     "dev-server": "webpack-dev-server --open --config webpack.dev.js",
-    "test": "jest --watch",
+    "test": "cross-env NODE_ENV=test jest --watch",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build"
   },
@@ -18,7 +18,9 @@
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.0",
+    "dotenv": "^8.2.0",
     "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
